--- a/index.html
+++ b/index.html
@@ -249,79 +249,69 @@
 				Marcas
 			</h2>
 		</div>
-		<!-- slider de marcas  -->	
-		<div id="marcas-slider" class="carousel slide" data-ride="carousel">
-			<div class="carousel-inner">
-
-				<!-- indicadores  -->
-				<ol class="carousel-indicators">
-   					<li data-target="#marcas-slider" data-slide-to="0" class="active"></li>
-    				<li data-target="#marcas-slider" data-slide-to="1"></li>
-  				</ol>
-  				<!-- fin indicadores -->
-
-				<div class="carousel-item marcas-single active">
-					<div class="row">
-							<div class="col-sm col-6">
-								<a href="modelos.html">
-								<img src="assets/images/logos/dodge.jpg" class="d-block w-100">
-								</a>
-							</div>
-							<div class="col-sm col-6">
-								<a href="modelos.html">
-								<img src="assets/images/logos/fiat.jpg" class="d-block w-100">
-								</a>
-							</div>
-							<div class="col-sm col-6">
-								<a href="modelos.html">
-								<img src="assets/images/logos/ford.jpg" class="d-block w-100">
-								</a>
-							</div>
-							<div class="col-sm col-6">
-								<a href="modelos.html">
-								<img src="assets/images/logos/honda.jpg" class="d-block w-100">
-								</a>
-							</div>
-							<div class="col-sm col-6">
-								<a href="modelos.html">
-								<img src="assets/images/logos/jeep.jpg" class="d-block w-100">
-								</a>
-							</div>
+		<!--  columnas de  marcas  -->	
+		<section class="brands">
+			<div class="marcas-single">
+				<div class="row">
+					<div class="col-sm col-6">
+						<a href="modelos.html">
+						<img src="assets/images/logos/dodge.jpg" class="d-block w-100">
+						</a>
 					</div>
-				</div>
-
-				<div class="carousel-item marcas-single">
-					<div class="row">
-						<div class="col-sm col-6 ">
-							<a href="modelos.html">
-							<img src="assets/images/logos/kia.jpg" class="d-block w-100">
-							</a>
-						</div>
-						<div class="col-sm col-6">
-							<a href="modelos.html">
-							<img src="assets/images/logos/mitsubishi.jpg" class="d-block w-100">
-							</a>
-						</div>
-						<div class="col-sm col-6">
-							<a href="modelos.html">
-							<img src="assets/images/logos/peugeot.jpg" class="d-block w-100">
-							</a>
-						</div>
-						<div class="col-sm col-6">
-							<a href="modelos.html">
-							<img src="assets/images/logos/ram.jpg" class="d-block w-100">
-							</a>
-						</div>
-						<div class="col-sm col-6">
-							<a href="modelos.html">
-							<img src="assets/images/logos/ssangyoung.jpg" class="d-block w-100">
-							</a>
-						</div>
+					<div class="col-sm col-6">
+						<a href="modelos.html">
+						<img src="assets/images/logos/fiat.jpg" class="d-block w-100">
+						</a>
 					</div>
-				</div>
-			</div>		
-		</div>
-		<!-- fin slider de marcas -->
+					<div class="col-sm col-6">
+						<a href="modelos.html">
+						<img src="assets/images/logos/ford.jpg" class="d-block w-100">
+						</a>
+					</div>
+					<div class="col-sm col-6">
+						<a href="modelos.html">
+						<img src="assets/images/logos/honda.jpg" class="d-block w-100">
+						</a>
+					</div>
+					<div class="col-sm col-6">
+						<a href="modelos.html">
+						<img src="assets/images/logos/jeep.jpg" class="d-block w-100">
+						</a>
+					</div>
+				</div> <!-- fin primer row -->
+				<div class="row">
+					<div class="col-sm col-6 ">
+						<a href="modelos.html">
+						<img src="assets/images/logos/kia.jpg" class="d-block w-100">
+						</a>
+					</div>
+					<div class="col-sm col-6">
+						<a href="modelos.html">
+						<img src="assets/images/logos/mitsubishi.jpg" class="d-block w-100">
+						</a>
+					</div>
+					<div class="col-sm col-6">
+						<a href="modelos.html">
+						<img src="assets/images/logos/peugeot.jpg" class="d-block w-100">
+						</a>
+					</div>
+					<div class="col-sm col-6">
+						<a href="modelos.html">
+						<img src="assets/images/logos/ram.jpg" class="d-block w-100">
+						</a>
+					</div>
+					<div class="col-sm col-6">
+						<a href="modelos.html">
+						<img src="assets/images/logos/ssangyoung.jpg" class="d-block w-100">
+						</a>
+					</div>
+				</div> <!-- fin segundo row -->
+			</div>
+		</section>
+			
+				
+
+		<!-- fin columnas de marcas -->
 	</div>
 	<!-- FIN MARCAS -->
 
