--- a/modelo-interior.html
+++ b/modelo-interior.html
@@ -12,14 +12,14 @@
 <body>
 	<!-- MENU -->
 	<nav class="navbar navbar-expand-lg navbar-light menu-principal">
-		<a class="navbar-brand" href="index.html">
+		<a class="navbar-brand link-logo" href="index.html">
 			<img class="logo" src="assets/images/logos/valenzuela_02.png" alt="Valenzuela & Delarze" class="img-fluid">
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<div class="collapse navbar-collapse navbar-vd-principal justify-content-end" id="navbarSupportedContent">
 			<ul class="navbar-nav menu_dv">
 				<li class="nav-item">
 					<a class="nav-link" href="nuevos.html">
@@ -38,7 +38,7 @@
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="post-venta.html">
-						Post Venta
+						PostVenta
 					</a>
 				</li>
 				<li class="nav-item">
@@ -51,8 +51,15 @@
 						Contacto
 					</a>
 				</li>
-
 			</ul>
+			<form class="justify-content-end">
+				<div class="row">
+					<input type="search" class="service-search rounded buscador" placeholder= "Buscar..."onfocus="this.placeholder = ''" />
+					<button class="btn btn-light rounded-circle buscador-btn" name="search">
+						<i class="fas fa-search"></i>
+					</button>
+				</div>
+			</form>
 		</div>
 	</nav>
 	<!-- <div class="container-fluid menu-principal">
@@ -69,7 +76,7 @@
 			<a href=""><li>Contacto</li></a> 
 		</ul>
 	</div> -->
-<!-- FIN MENU -->
+	<!-- FIN MENU -->
 
 <!-- TITULO MARCA - MODELO -->
 	<div class="titulo">
