--- a/modelos.html
+++ b/modelos.html
@@ -19,7 +19,7 @@
 			<span class="navbar-toggler-icon"></span>
 		</button>
 
-		<div class="collapse navbar-collapse navbar-vd-principal" id="navbarSupportedContent">
+		<div class="collapse navbar-collapse navbar-vd-principal justify-content-end" id="navbarSupportedContent">
 			<ul class="navbar-nav menu_dv">
 				<li class="nav-item">
 					<a class="nav-link" href="nuevos.html">
@@ -38,7 +38,7 @@
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="post-venta.html">
-						Post Venta
+						PostVenta
 					</a>
 				</li>
 				<li class="nav-item">
@@ -51,8 +51,15 @@
 						Contacto
 					</a>
 				</li>
-
 			</ul>
+			<form class="justify-content-end">
+				<div class="row">
+					<input type="search" class="service-search rounded buscador" placeholder= "Buscar..."onfocus="this.placeholder = ''" />
+					<button class="btn btn-light rounded-circle buscador-btn" name="search">
+						<i class="fas fa-search"></i>
+					</button>
+				</div>
+			</form>
 		</div>
 	</nav>
 	<!-- <div class="container-fluid menu-principal">
