integracion barra rrss

--- a/nuevos.html
+++ b/nuevos.html
@@ -10,7 +10,19 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-
+	<!-- barra rrss -->
+	<div class="container-fluid bg-dark rrss-barra">
+		<a href="https://www.facebook.com/valenzueladelarze">
+			<i class="fab fa-facebook-f"></i>
+		</a>
+		<a href="https://www.youtube.com/channel/UCEDXGQZq6-4l8gtuYU4X9Ig/feed" >
+			<i class="fab fa-youtube"></i>
+		</a>
+		<a href="https://www.instagram.com/valenzueladelarze/?hl=es-la">
+			<i class="fab fa-instagram"></i>
+		</a>
+	</div>
+	<!-- fin barra rrss -->
 	<!-- MENU -->
 	<nav class="navbar navbar-expand-lg navbar-light menu-principal">
 		<a class="navbar-brand link-logo" href="index.html">
