numero y mail en el header

--- a/contacto.html
+++ b/contacto.html
@@ -21,6 +21,12 @@
 		<a href="https://www.instagram.com/valenzueladelarze/?hl=es-la">
 			<i class="fab fa-instagram"></i>
 		</a>
+		<a class="btn-abrir" href="#">
+			Número de teléfono
+		</a> 
+		<a class="btn-abrir" href="#">
+			Email
+		</a> 
 	</div>
 	<!-- fin barra rrss -->
 	<!-- MENU -->
