--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 		<a href="https://www.instagram.com/valenzueladelarze/?hl=es-la">
 			<i class="fab fa-instagram"></i>
 		</a>
+		<a class="btn-abrir" href="#">
+			Número de teléfono
+		</a> 
+		<a class="btn-abrir" href="#">
+			Email
+		</a> 
 	</div>
 	<!-- fin barra rrss -->
 
